<?xml version="1.0"?>
<package format="2">
  <name>tams_midi_publisher</name>
  <version>0.0.1</version>
  <description>The tams_midi_publisher package</description>
  <maintainer email="2scholz@informatik.uni-hamburg.de">Benjamin Scholz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
